@@ -1,4 +1,5 @@
 10.29.0 (September XX, 2024)
+ - Added `factory.destroy()` method, which invokes the `destroy` method on all SDK clients created by the factory.
  - Updated @splitsoftware/splitio-commons package to version 1.18.0 that includes minor updates:
     - Added support for targeting rules based on large segments for browsers.
     - Updated some transitive dependencies for vulnerability fixes.
